tests/paczka1/fuzzy1/50478704.err
Error in line 9: MiJ A318 13,4
Error in line 12: MiJ A941 79,2
